refactor(course): AI 생성 서비스 책임 분리 및 구조 개선
- `AICourseGenerationService`의 저장 로직 제거 (JSON 데이터 반환으로 변경)
- `GPTCourseService`를 `AICourseGenerationService`로 통합 및 `isForHome` 파라미터 삭제
- `CourseService`로 AI 코스 저장 로직 이관 (`saveCourseAndPlaces`)
- GPT 호출과 DB 트랜잭션을 분리하여 성능 최적화