@@ -3,19 +3,18 @@ package umc.catchy.domain.course.service;
 import java.time.LocalTime;
 import java.util.UUID;
 import java.util.stream.IntStream;
+import java.time.format.DateTimeParseException;
 
 import jakarta.persistence.EntityManager;
 import jakarta.persistence.PersistenceContext;
 import lombok.RequiredArgsConstructor;
+import org.apache.commons.lang3.tuple.Pair;
 import org.springframework.data.domain.Slice;
-import com.fasterxml.jackson.databind.ObjectMapper;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.data.redis.core.StringRedisTemplate;
 import org.springframework.scheduling.annotation.EnableAsync;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
-import umc.catchy.domain.category.dao.CategoryRepository;
 import umc.catchy.domain.course.dto.response.*;
 import umc.catchy.domain.course.dao.CourseRepository;
 import umc.catchy.domain.course.domain.Course;
@@ -27,10 +26,6 @@ import umc.catchy.domain.mapping.memberCourse.dao.MemberCourseRepository;
 import umc.catchy.domain.mapping.memberCourse.domain.MemberCourse;
 import umc.catchy.domain.mapping.memberCourse.dto.response.MemberCourseResponse;
 import umc.catchy.domain.mapping.memberCourse.dto.response.MemberCourseSliceResponse;
-import umc.catchy.domain.mapping.memberActivetime.dao.MemberActiveTimeRepository;
-import umc.catchy.domain.mapping.memberCategory.dao.MemberCategoryRepository;
-import umc.catchy.domain.mapping.memberLocation.dao.MemberLocationRepository;
-import umc.catchy.domain.mapping.memberStyle.dao.MemberStyleRepository;
 import umc.catchy.domain.mapping.placeCourse.dao.PlaceCourseRepository;
 import umc.catchy.domain.mapping.placeCourse.domain.PlaceCourse;
 import umc.catchy.domain.mapping.placeVisit.dao.PlaceVisitRepository;
@@ -39,12 +34,10 @@ import umc.catchy.domain.member.dao.MemberRepository;
 import umc.catchy.domain.member.domain.Member;
 import umc.catchy.domain.place.dao.PlaceRepository;
 import umc.catchy.domain.place.domain.Place;
-import umc.catchy.domain.placeReview.dao.PlaceReviewRepository;
 import umc.catchy.global.common.response.status.ErrorStatus;
 import umc.catchy.global.error.exception.GeneralException;
 import umc.catchy.global.util.SecurityUtil;
 import umc.catchy.infra.aws.s3.AmazonS3Manager;
-import umc.catchy.infra.config.fcm.FCMService;
 
 import java.time.format.DateTimeFormatter;
 import java.util.List;
@@ -70,66 +63,80 @@ public class CourseService {
     private final MemberCourseRepository memberCourseRepository;
     private final AmazonS3Manager amazonS3Manager;
     private final PlaceRepository placeRepository;
-    private final MemberLocationRepository memberLocationRepository;
-    private final MemberActiveTimeRepository memberActiveTimeRepository;
-    private final MemberCategoryRepository memberCategoryRepository;
-    private final MemberStyleRepository memberStyleRepository;
-    private final CategoryRepository categoryRepository;
-    private final StringRedisTemplate redisTemplate;
-    private final ObjectMapper objectMapper;
-    private final GPTCourseService gptCourseService;
-    private final PlaceReviewRepository placeReviewRepository;
-    private final FCMService fcmService;
 
     @PersistenceContext
     private EntityManager entityManager;
+
+    public List<Long> getAllMemberIds() {
+        return memberRepository.findAll().stream()
+                .map(Member::getId)
+                .toList();
+    }
 
     private Course getCourse(Long courseId) {
         return courseRepository.findById(courseId)
                 .orElseThrow(() -> new GeneralException(ErrorStatus.COURSE_NOT_FOUND));
     }
 
-    //코스의 각 장소 별 간단한 정보 받아오기
-    private List<CourseDetailResponse.CoursePlaceInfo> getPlaceListOfCourse(Course course, Member member) {
-        return placeCourseRepository.findAllByCourse(course).stream()
-                .map(placeCourse -> {
-                    // 멤버의 장소 방문 여부 확인
-                    Boolean isVisited = placeVisitRepository.findByPlaceAndMember(placeCourse.getPlace(), member)
-                            .map(PlaceVisit::isVisited)
-                            .orElse(false);
+    public void saveCourseAndPlaces(GptCourseInfoResponse parsedResponse, Member member) {
+        Pair<LocalTime, LocalTime> recommendTime = parseRecommendTime(parsedResponse.recommendTime());
 
-                    return CourseDetailResponse.CoursePlaceInfo.of(placeCourse.getPlace(), isVisited);
-                })
-                .toList();
+        Course course = Course.builder()
+                .courseName(parsedResponse.courseName())
+                .courseDescription(parsedResponse.courseDescription())
+                .courseType(CourseType.AI)
+                .recommendTimeStart(recommendTime.getLeft())
+                .recommendTimeEnd(recommendTime.getRight())
+                .courseImage(null)
+                .participantsNumber(0L)
+                .member(member)
+                .build();
+
+        Course savedCourse = courseRepository.save(course);
+
+        int order = 1;
+        double totalRating = 0.0;
+        int placeCount = 0;
+
+        for (GptPlaceInfoResponse placeInfo : parsedResponse.placeInfos()) {
+            Place place = placeRepository.findById(placeInfo.placeId())
+                    .orElseThrow(() -> new GeneralException(ErrorStatus.PLACE_NOT_FOUND));
+
+            PlaceCourse placeCourse = PlaceCourse.builder()
+                    .course(savedCourse)
+                    .place(place)
+                    .placeOrder(order++)
+                    .build();
+
+            placeCourseRepository.save(placeCourse);
+
+            if (place.getRating() != null && place.getRating() > 0) {
+                totalRating += place.getRating();
+                placeCount++;
+            }
+        }
+
+        double courseRating = placeCount > 0 ? totalRating / placeCount : 0.0;
+        savedCourse.updateRating(courseRating);
+
+        MemberCourse memberCourse = MemberCourse.builder()
+                .course(savedCourse)
+                .member(member)
+                .build();
+        memberCourseRepository.save(memberCourse);
     }
 
-    //Course : 리뷰 개수 로직
-    private Integer calculateNumberOfReviews(Course course) {
-        if (!course.isHasReview()) {
-            return 0;
-        } else {
-            return courseReviewRepository.countAllByCourse(course);
+    private Pair<LocalTime, LocalTime> parseRecommendTime(String recommendTime) {
+        try {
+            String[] times = recommendTime.split("~");
+            LocalTime startTime = LocalTime.parse(times[0].trim());
+            LocalTime endTime = times[1].equals("24:00") ? LocalTime.MIDNIGHT : LocalTime.parse(times[1].trim());
+            return Pair.of(startTime, endTime);
+        } catch (DateTimeParseException e) {
+            throw new GeneralException(ErrorStatus.INVALID_REQUEST_INFO);
         }
     }
 
-    //Course : 추천 시간대 String 변환
-    private String getRecommendTimeToString(Course course) {
-        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("HH:mm");
-
-        LocalTime startTime = course.getRecommendTimeStart() != null ? course.getRecommendTimeStart() : LocalTime.of(9, 0);
-        LocalTime endTime = course.getRecommendTimeEnd() != null ? course.getRecommendTimeEnd() : LocalTime.of(21, 0);
-
-        return startTime.format(formatter) + " ~ " + endTime.format(formatter);
-    }
-
-    //북마크 여부 가져오기
-    private Boolean getBookmarks(Course course, Member member) {
-        return memberCourseRepository.findByCourseAndMember(course, member)
-                .map(MemberCourse::isBookmark)
-                .orElse(false);
-    }
-
-    //코스의 상세 정보 받아오기
     public CourseDetailResponse getCourseDetails(Long courseId) {
         Course course = getCourse(courseId);
         Long memberId = SecurityUtil.getCurrentMemberId();
@@ -213,17 +220,12 @@ public class CourseService {
         Member member = memberRepository.findById(memberId)
                 .orElseThrow(() -> new GeneralException(ErrorStatus.MEMBER_NOT_FOUND));
 
-        // 사용자가 가지고 있는 코스인지 검증
         MemberCourse memberCourse = memberCourseRepository.findByCourseAndMember(course, member)
                 .orElseThrow(() -> new GeneralException(ErrorStatus.COURSE_INVALID_MEMBER));
 
         memberCourseRepository.delete(memberCourse);
-
-        // 코스의 장소들 삭제
         List<PlaceCourse> placeCourses = placeCourseRepository.findAllByCourse(course);
         placeCourseRepository.deleteAll(placeCourses);
-
-        // 코스 삭제
         courseRepository.delete(course);
     }
 
@@ -232,7 +234,6 @@ public class CourseService {
         Member member = memberRepository.findById(memberId)
                 .orElseThrow(() -> new GeneralException(ErrorStatus.MEMBER_NOT_FOUND));
 
-        // 이미지 업로드
         String courseImageUrl = null;
         if (request.courseImage() != null) {
             String keyName = "course-images/" + UUID.randomUUID();
@@ -241,7 +242,6 @@ public class CourseService {
 
         Course course = request.toEntity(member, courseImageUrl);
 
-        // 평점 계산 (초기 생성 시)
         List<Long> placeIds = request.placeIds();
         Double averageRating = placeIds.stream()
                 .map(placeId -> placeRepository.findById(placeId)
@@ -253,8 +253,6 @@ public class CourseService {
                 .orElse(0.0);
 
         course.updateRating(averageRating);
-
-        // 장소 매핑 저장
         courseRepository.save(course);
 
         Course finalCourse = course;
@@ -271,7 +269,6 @@ public class CourseService {
             placeCourseRepository.save(newPlaceCourse);
         });
 
-        // MemberCourse 매핑
         MemberCourse memberCourse = MemberCourse.builder()
                 .course(course)
                 .member(member)
@@ -282,9 +279,25 @@ public class CourseService {
         return CourseDetailResponse.from(course, calculateNumberOfReviews(course), false, placeListOfCourse);
     }
 
-    public List<Long> getAllMemberIds() {
-        return memberRepository.findAll().stream()
-                .map(Member::getId)
-                .collect(Collectors.toList());
+    private List<CourseDetailResponse.CoursePlaceInfo> getPlaceListOfCourse(Course course, Member member) {
+        return placeCourseRepository.findAllByCourse(course).stream()
+                .map(placeCourse -> {
+                    Boolean isVisited = placeVisitRepository.findByPlaceAndMember(placeCourse.getPlace(), member)
+                            .map(PlaceVisit::isVisited)
+                            .orElse(false);
+                    return CourseDetailResponse.CoursePlaceInfo.of(placeCourse.getPlace(), isVisited);
+                })
+                .toList();
     }
+
+    private Integer calculateNumberOfReviews(Course course) {
+        return !course.isHasReview() ? 0 : courseReviewRepository.countAllByCourse(course);
+    }
+
+    private Boolean getBookmarks(Course course, Member member) {
+        return memberCourseRepository.findByCourseAndMember(course, member)
+                .map(MemberCourse::isBookmark)
+                .orElse(false);
+    }
+
 }
